--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "packed-array",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "An utility to create fast, non-holey, arrays.",
   "main": "cjs/index.js",
   "scripts": {
@@ -13,7 +13,12 @@
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
     "test": "nyc node test/index.js"
   },
-  "keywords": ["v8", "packed", "array", "fast"],
+  "keywords": [
+    "v8",
+    "packed",
+    "array",
+    "fast"
+  ],
   "author": "Andrea Giammarchi",
   "license": "ISC",
   "devDependencies": {
